--- a/TASK_3.ipynb
+++ b/TASK_3.ipynb
@@ -122,7 +122,7 @@
       "source": [
         "mark = float(input())\n",
         "\n",
-        "if mark >=0.9:\n",
+        "if mark > 1.1 and mark >=0.9:\n",
         "  print(\"A\")\n",
         "elif mark >=0.8 and mark <0.9:\n",
         "  print(\"B\")\n",
