--- a/TASK_6.ipynb
+++ b/TASK_6.ipynb
@@ -29,10 +29,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "KlFG2BFZoEEU",
-        "outputId": "081ffd8a-4c38-409f-b127-0d331c4faf85",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "081ffd8a-4c38-409f-b127-0d331c4faf85"
       },
       "source": [
         "#please enter your answer below this line\n",
@@ -67,25 +67,24 @@
       "cell_type": "code",
       "metadata": {
         "id": "64-aUjWbohqz",
-        "outputId": "ab4d3201-b188-4833-b7e5-fba6e37fc8b9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "128683dd-6135-495e-8f30-ff7aea10c3b4"
       },
       "source": [
-        "for i in range(0, 3):\n",
-        "  for j in range(0, i+1):\n",
-        "    print('#', end='')\n",
-        "  print('\\r')"
+        "print(\"  #\")\n",
+        "print(\" ##\")\n",
+        "print(\"###\")"
       ],
-      "execution_count": 14,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "#\r\n",
-            "##\r\n",
-            "###\r\n"
+            "  #\n",
+            " ##\n",
+            "###\n"
           ],
           "name": "stdout"
         }
@@ -105,10 +104,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "D7UOyf_6o6Ax",
-        "outputId": "2e682ef6-f928-44d8-ee46-fd6f47619a89",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2e682ef6-f928-44d8-ee46-fd6f47619a89"
       },
       "source": [
         "lst=['apple', 'orange', 'apple', 'banana']\n",
