--- a/TASK_14.ipynb
+++ b/TASK_14.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "TASK 14.ipynb",
+      "name": "TASK_14.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -28,10 +28,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "1HQu2yB2YMbj",
-        "outputId": "65cc2f77-8ca6-41ba-d71b-69442d1ff9fa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "65cc2f77-8ca6-41ba-d71b-69442d1ff9fa"
       },
       "source": [
         "#please type your answer below this line.\n",
@@ -41,7 +41,7 @@
         "arr2 = np.array([8,18])\n",
         "print(f\"solution: {np.linalg.solve(arr1,arr2)}\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,10 +65,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "iXZByHNOaXbk",
-        "outputId": "b8ca1007-0256-4768-860f-e5f7a4daa7fd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b8ca1007-0256-4768-860f-e5f7a4daa7fd"
       },
       "source": [
         "#please type your answer below this line.\n",
@@ -79,7 +79,7 @@
         "print(f\"cos: {np.cos(arr)}\")\n",
         "print(f\"tan: {np.tan(arr)}\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,10 +109,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lgxpIaKebw5y",
-        "outputId": "d6f20435-fbe7-410c-d5e8-60e3d1fab5d1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cefb3683-93bf-410a-84af-0843b496940f"
       },
       "source": [
         "#please type your answer below this line.\n",
@@ -120,18 +120,18 @@
         "\n",
         "b = [5,6]\n",
         "print(f\"2sinb : {2*np.sin(b)}\")\n",
-        "print(f\"2cos3b : {2*np.cos(3*b)}\")\n",
-        "print(f\"2cos3b : {4*np.tan(2*b)}\")"
+        "print(f\"2cos3b : {2*np.cos(np.multiply(b,3))}\")\n",
+        "print(f\"4tan2b : {4*np.tan(np.multiply(b,2))}\")"
       ],
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "2sinb : [-1.91784855 -0.558831  ]\n",
-            "2cos3b : [0.56732437 1.92034057 0.56732437 1.92034057 0.56732437 1.92034057]\n",
-            "2cos3b : [-13.52206002  -1.16402477 -13.52206002  -1.16402477]\n"
+            "2cos3b : [-1.51937583  1.32063342]\n",
+            "4tan2b : [ 2.59344331 -2.54343971]\n"
           ]
         }
       ]
