--- a/TASK_18.ipynb
+++ b/TASK_18.ipynb
@@ -32,10 +32,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "5zFM5VOJBKBV",
-        "outputId": "f09b70ac-f18c-45df-df7a-05d63dfe90da",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f09b70ac-f18c-45df-df7a-05d63dfe90da"
       },
       "source": [
         "import numpy as np\n",
@@ -93,10 +93,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "qV_wzsp1DUKI",
-        "outputId": "c5e2161d-6086-4969-9fd2-aaf66eaf249b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ff607ddc-54eb-4f21-c9a2-15a22b108b6a"
       },
       "source": [
         "import numpy as np\n",
@@ -106,9 +106,19 @@
         "\n",
         "df = pd.DataFrame(np.random.randn(6, 4), index=dates, columns=list('ABCD'))\n",
         "dd = df.filter(items=['A','B'])\n",
-        "print(f\"index from 1 to 3: \\n {dd.iloc[:3]}\")"
+        "print(f\"index from 1 to 3: \\n {dd.iloc[:3]}\")\n",
+        "\n",
+        "print(f\"data from thrid index: {df.iloc[[3]]}\")\n",
+        "\n",
+        "print(f\"data from 2 to 6 index: {df.iloc[2:5]}\")\n",
+        "\n",
+        "d1 = df.iloc[:2]\n",
+        "d2 = df.iloc[[4]]\n",
+        "\n",
+        "res = pd.concat([d1,d2])\n",
+        "print(f\"Data from index 1,2,4 and column 0 and 2: {res.filter(items=['A','C'])}\")"
       ],
-      "execution_count": 61,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,9 +126,23 @@
           "text": [
             "index from 1 to 3: \n",
             "                    A         B\n",
-            "2020-01-01  0.286068 -0.644230\n",
-            "2020-01-02 -1.585471 -0.657620\n",
-            "2020-01-03  0.961575 -0.477148\n"
+            "2020-01-01 -0.614119 -2.793117\n",
+            "2020-01-02 -0.619789 -0.250830\n",
+            "2020-01-03  0.158482 -1.533525\n",
+            "data from thrid index:                    A         B         C         D\n",
+            "2020-01-04  0.312109  0.592101 -0.198639  0.377179\n",
+            "data from 2 to 6 index:                    A         B         C         D\n",
+            "2020-01-03  0.158482 -1.533525 -0.180121 -1.118100\n",
+            "2020-01-04  0.312109  0.592101 -0.198639  0.377179\n",
+            "2020-01-05 -0.413976 -1.573118  0.293393 -0.164567\n",
+            "Data from index 1,2,4:                    A         B         C         D\n",
+            "2020-01-01 -0.614119 -2.793117  1.048003  0.250283\n",
+            "2020-01-02 -0.619789 -0.250830  0.270566 -1.058733\n",
+            "2020-01-05 -0.413976 -1.573118  0.293393 -0.164567\n",
+            " column 0 and 2:                    A         C\n",
+            "2020-01-01 -0.614119  1.048003\n",
+            "2020-01-02 -0.619789  0.270566\n",
+            "2020-01-05 -0.413976  0.293393\n"
           ]
         }
       ]
