--- a/TASK_21.ipynb
+++ b/TASK_21.ipynb
@@ -32,11 +32,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "C_Kq4i_rVNyB",
-        "outputId": "cb3bdbc0-7e33-47f7-a883-1fbc9116d005",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
-        }
+        },
+        "outputId": "9edd38fa-f355-4149-c84c-cba3b17058ba"
       },
       "source": [
         "import pandas as pd\n",
@@ -53,9 +53,10 @@
         "grouped.sum()\n",
         "\n",
         "df.nsmallest(3, ['D'])\n",
-        "df.nlargest(3, ['D'])"
+        "df.nlargest(3, ['D'])\n",
+        "df.groupby(['A']).get_group(('bar'))"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -79,39 +80,47 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>A</th>\n",
+              "      <th>B</th>\n",
               "      <th>C</th>\n",
               "      <th>D</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>A</th>\n",
-              "      <th></th>\n",
-              "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>bar</th>\n",
-              "      <td>1.770696</td>\n",
-              "      <td>3.195814</td>\n",
+              "      <th>1</th>\n",
+              "      <td>bar</td>\n",
+              "      <td>one</td>\n",
+              "      <td>-0.348998</td>\n",
+              "      <td>0.232419</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>foo</th>\n",
-              "      <td>2.953711</td>\n",
-              "      <td>1.825206</td>\n",
+              "      <th>3</th>\n",
+              "      <td>bar</td>\n",
+              "      <td>three</td>\n",
+              "      <td>0.446027</td>\n",
+              "      <td>-1.121588</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>bar</td>\n",
+              "      <td>two</td>\n",
+              "      <td>-0.827217</td>\n",
+              "      <td>1.110933</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "            C         D\n",
-              "A                      \n",
-              "bar  1.770696  3.195814\n",
-              "foo  2.953711  1.825206"
+              "     A      B         C         D\n",
+              "1  bar    one -0.348998  0.232419\n",
+              "3  bar  three  0.446027 -1.121588\n",
+              "5  bar    two -0.827217  1.110933"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 16
         }
       ]
     },
@@ -132,10 +141,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "J4BOx3UZdVLV",
-        "outputId": "5e2a0ff2-7513-440d-ac8f-196c55ca4355",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5e2a0ff2-7513-440d-ac8f-196c55ca4355"
       },
       "source": [
         "import pandas as pd\n",
